// Copyright 2022 MatrixOrigin.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option go_package = "/rpc";

enum MethodType {
  CREATE       = 0;
  DESTROY      = 1;
  APPEND       = 2;
  READ         = 3;
  TRUNCATE     = 4;
  GET_TRUNCATE = 5;
  CONNECT      = 6;
  CONNECT_RO   = 7;
}

message LogRecord {
  uint64 Index = 1;
  bytes Data   = 2;
};

message Request {
  MethodType Method   = 1;
  string Name         = 2;
  uint64 ShardID      = 3;
  uint64 Index        = 4;
  uint64 MaxSize      = 5;
  int64 Timeout       = 6;

  uint64 DNShardID    = 7;
  uint64 DNID         = 8;

  uint64 PayloadSize  = 9;
};

enum ErrorCode {
  NoError               = 0;
  Timeout               = 1;
  Canceled              = 2;
  InvalidShard          = 3;
  InvalidTimeout        = 4;
  InvalidPayload        = 5;
  InvalidPayloadSize    = 6;
  Rejected              = 7;
  ShardNotReady         = 8;
  SystemClosed          = 9;
  
  IndexAlreadyTruncated = 100;
  OutOfRange            = 101;
  NotLeaseHolder        = 102;

  OtherSystemError      = 1000;
}

message Response {
  MethodType Method   = 1;     
  ErrorCode ErrorCode = 2;
  string ErrorMessage = 3;
  uint64 ShardID      = 4;
  uint64 Index        = 5;
  uint64 LastIndex    = 6;
};

message LogRecordResponse {
  repeated LogRecord Records = 1;
};
